New modifications added to facebook.html and facebook.css

--- a/facebook.html
+++ b/facebook.html
@@ -9,6 +9,24 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <div class="container">
+        <div class="left-container">
+            <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook Logo">
+            <p>Avec Facebook, partagez et restez en contact avec votre entourage.</p>
+        </div>
+        <div class="right-container">
+            <form action="#" class="myform">
+                <input type="text" placeholder="Adresse email ou numero de tel." class="form-group">
+                <input type="password" placeholder="Mot de passe" class="form-group">
+                <input type="submit" value="Se connecter" class="form-group">
+                <a href="" class="forget-pass">Mot de passe oublie?</a>
+                <hr>
+                <button>Creer un compte</button>
+
+            </form>
+
+        </div>
+    </div>
     
 </body>
 </html>
