New modifications added to the project

--- a/facebook.html
+++ b/facebook.html
@@ -20,8 +20,10 @@
                 <input type="password" placeholder="Mot de passe" class="form-group">
                 <input type="submit" value="Se connecter" class="form-group">
                 <a href="" class="forget-pass">Mot de passe oublie?</a>
+
                 <hr>
-                <button>Creer un compte</button>
+        
+                <button>Creer nouveau compte</button>
 
             </form>
 
