New modifications added to the project

--- a/facebook.html
+++ b/facebook.html
@@ -26,6 +26,7 @@
                 <button>Creer nouveau compte</button>
 
             </form>
+            <p><a href="">Créer une Page</a> pour une célébrité, une marque ou une entreprise.</p>
 
         </div>
     </div>
