--- a/facebook.html
+++ b/facebook.html
@@ -6,7 +6,7 @@
     <title>facebook-Connexion ou inscription</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='facebook.css'>
-    <script src='main.js'></script>
+    
 </head>
 <body>
     <div class="container">
@@ -27,6 +27,6 @@
 
         </div>
     </div>
-    
+    <script src='facebook.js' defer></script>
 </body>
 </html>
